[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/PlayerSprites.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/SpriteListItem.gd" type="Script" id=2]
[ext_resource path="res://Assets/Ui/rightturn.png" type="Texture" id=3]
[ext_resource path="res://Assets/Ui/leftturn.png" type="Texture" id=4]
[ext_resource path="res://Assets/Ui/leftturnpressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Ui/rightturnpressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Ui/leftturnhover.png" type="Texture" id=7]
[ext_resource path="res://Assets/Ui/rightturnfocus.png" type="Texture" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Ui/that_old__90s_computer_font_by_thebitchisback420_ddbqpfn.ttf"

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = SubResource( 1 )

[node name="SpriteListItem" type="HBoxContainer"]
margin_right = 500.0
margin_bottom = 140.0
rect_min_size = Vector2( 500, 140 )
custom_constants/separation = 150
script = ExtResource( 2 )

[node name="SpriteName" type="Label" parent="."]
margin_top = 55.0
margin_right = 70.0
margin_bottom = 85.0
rect_min_size = Vector2( 70, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "test"
align = 1
valign = 1

[node name="SpriteContainer" type="Control" parent="."]
margin_left = 220.0
margin_right = 220.0
margin_bottom = 140.0

[node name="PlayerSprites" parent="SpriteContainer" instance=ExtResource( 1 )]
position = Vector2( 10, 60 )
scale = Vector2( 3, 3 )

[node name="Left" type="TextureButton" parent="SpriteContainer"]
margin_left = -68.0
margin_top = 90.0
margin_right = -52.0
margin_bottom = 106.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Right" type="TextureButton" parent="SpriteContainer"]
margin_left = 38.0
margin_top = 90.0
margin_right = 54.0
margin_bottom = 106.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )
expand = true

[node name="ButtonContainer" type="Control" parent="."]
margin_left = 370.0
margin_right = 370.0
margin_bottom = 140.0

[node name="Edit" type="Button" parent="ButtonContainer"]
margin_left = -5.0
margin_top = 46.0
margin_right = 35.0
margin_bottom = 87.0
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="ButtonContainer"]
margin_left = 47.0
margin_top = 46.0
margin_right = 103.0
margin_bottom = 87.0
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="SpriteContainer/Left" to="." method="_on_Turn_button_up" binds= [ -1 ]]
[connection signal="button_up" from="SpriteContainer/Right" to="." method="_on_Turn_button_up" binds= [ 1 ]]
[connection signal="button_up" from="ButtonContainer/Edit" to="." method="_on_Edit_button_up"]
[connection signal="button_up" from="ButtonContainer/Delete" to="." method="_on_Delete_button_up"]
